--- a/libtermexec/src/main/AndroidManifest.xml
+++ b/libtermexec/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="jackpal.androidterm.libtermexec">
+          package="ze00.PvzCheater.libtermexec">
     <application/>
 </manifest>
