--- a/term/src/main/AndroidManifest.xml
+++ b/term/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jackpal.androidterm"
+      package="ze00.PvzCheater"
       android:versionName="1.0.70"
       android:versionCode="71"
       android:installLocation="auto">
@@ -10,17 +10,17 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <permission android:name="jackpal.androidterm.permission.RUN_SCRIPT"
+    <permission android:name="ze00.Pva_Cheater.permission.RUN_SCRIPT"
                 android:label="@string/perm_run_script"
                 android:description="@string/permdesc_run_script"
                 android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
                 android:protectionLevel="dangerous" />
-    <permission android:name="jackpal.androidterm.permission.APPEND_TO_PATH"
+    <permission android:name="ze00.Pva_Cheater.permission.APPEND_TO_PATH"
                 android:label="@string/perm_append_to_path"
                 android:description="@string/permdesc_append_to_path"
                 android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
                 android:protectionLevel="dangerous" />
-    <permission android:name="jackpal.androidterm.permission.PREPEND_TO_PATH"
+    <permission android:name="ze00.Pva_Cheater.permission.PREPEND_TO_PATH"
                 android:label="@string/perm_prepend_to_path"
                 android:description="@string/permdesc_prepend_to_path"
                 android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
@@ -43,18 +43,18 @@
                 android:targetActivity="Term"
                 android:exported="false">
             <intent-filter>
-                <action android:name="jackpal.androidterm.private.OPEN_NEW_WINDOW" />
+                <action android:name="ze00.Pva_Cheater.private.OPEN_NEW_WINDOW" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <intent-filter>
-                <action android:name="jackpal.androidterm.private.SWITCH_WINDOW" />
+                <action android:name="ze00.Pva_Cheater.private.SWITCH_WINDOW" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity-alias>
         <activity android:name="RemoteInterface"
                 android:excludeFromRecents="true">
             <intent-filter>
-                <action android:name="jackpal.androidterm.OPEN_NEW_WINDOW" />
+                <action android:name="ze00.Pva_Cheater.OPEN_NEW_WINDOW" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -72,16 +72,16 @@
         </activity-alias>
         <activity android:name="RunScript"
                 android:excludeFromRecents="true"
-                android:permission="jackpal.androidterm.permission.RUN_SCRIPT">
+                android:permission="ze00.Pva_Cheater.permission.RUN_SCRIPT">
             <intent-filter>
-                <action android:name="jackpal.androidterm.RUN_SCRIPT" />
+                <action android:name="ze00.Pva_Cheater.RUN_SCRIPT" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name="RunShortcut"
                 android:excludeFromRecents="true">
             <intent-filter>
-                <action android:name="jackpal.androidterm.RUN_SHORTCUT" />
+                <action android:name="ze00.Pva_Cheater.RUN_SHORTCUT" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -91,13 +91,13 @@
                 android:label="@string/window_list" />
         <service android:name="TermService" >
             <intent-filter>
-                <action android:name="jackpal.androidterm.action.START_TERM.v1"/>
+                <action android:name="ze00.Pva_Cheater.action.START_TERM.v1"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </service>
     <activity
       android:label="@string/activity_shortcut_create"
-      android:name="jackpal.androidterm.shortcuts.AddShortcut"
+      android:name="ze00.Pva_Cheater.shortcuts.AddShortcut"
       android:launchMode="singleTop"
       android:theme="@android:style/Theme.Translucent.NoTitleBar"
       android:configChanges="orientation|keyboard|keyboardHidden"
@@ -114,7 +114,7 @@
       </intent-filter>
     </activity>
     <activity
-      android:name="jackpal.androidterm.shortcuts.FSNavigator"
+      android:name="ze00.Pva_Cheater.shortcuts.FSNavigator"
       android:label="@string/addshortcut_button_find_command"
       android:launchMode="singleTop"
       android:configChanges="orientation|keyboardHidden"
